📦 NEW: Ajout du panier et des quantité

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
         "@symfony/ux-typed": "file:vendor/symfony/ux-typed/assets",
         "@symfony/webpack-encore": "^4.0.0",
         "core-js": "^3.23.0",
+        "file-loader": "^6.0.0",
         "regenerator-runtime": "^0.13.9",
+        "sass": "^1.69.5",
+        "sass-loader": "^13.0.0",
         "swup": "^3.0",
         "tom-select": "^2.2.2",
         "typed.js": "^2.0",
